--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 
 		<app.runtime>4.4.0-20220221</app.runtime>
 		<mule.maven.plugin.version>3.5.4</mule.maven.plugin.version>
+		<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
+<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
+<otherVariable>${test}</otherVariable>
 	</properties>
 
 	<build>
